# EyeDiseaseDetect

./: .gitignore  README.md  pyproject.toml  requirements.txt
EyeDiseaseDetect/: NORMAL  PNEUMONIA  Responses.py  consts.py  main.py  utils.py
EyeDiseaseDetect/Models/: ModelConstructor.py  utils.py  yolov5s.py
EyeDiseaseDetect/Models/Glaucoma/: Demo_DENet_GlaucomaScreen.py  Model_Disc_Seg.py  Model_UNet_Side.py  Model_resNet50.py  README.md  Real_DENet.py  utils.py
EyeDiseaseDetect/Models/ResNet/: ResNet.py
EyeNew/: FileScan.py  Responses.py  main.py
data/: README.md  config.ini
tests/: test_utils.py
tests/assets/: 1.json
web/: .eslintrc  .prettierrc.js  index.html  package.json  vite.config.ts
web/src/: interface.ts  main.ts
web/src/components/Labelmg/: Platform.ts
web/src/config/: global.ts  proxy.ts  style.ts
web/src/layouts/: index.tsx
web/src/layouts/components/: Footer.vue  Header.vue
web/src/pages/Detect/: types.ts
web/src/pages/Detect/components/: CommonTable.vue  basic.less  consts.ts  disease.vue  feature.vue  risk.vue  tabs.vue
web/src/pages/Detect/tree/: Basic.vue  FlowChart.vue  StaticImg.vue  constants.ts  imgLable.vue  index.vue
web/src/pages/Upload/: index.vue
web/src/router/: index.ts
web/src/router/modules/: custom.ts
web/src/style/: variables.less
web/src/utils/: request.ts
