[tool.poetry]
name = "EyeDiseaseDetect"
version = "0.1.0"
description = ""
authors = ["InEase <InEase28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.1"
Flask-Cors = "^3.0.10"
service-streamer = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
EyeDiseaseDetect = "EyeDiseaseDetect.cli:entry"